Fix publish workflow YAML

--- a/.github/workflows/publish-openvsx.yml
+++ b/.github/workflows/publish-openvsx.yml
@@ -31,7 +31,8 @@ jobs:
         run: npm ci
 
       - name: Validate tag matches package.json version
-        run: node -e "const tag=process.env.GITHUB_REF_NAME||''; const version=require('./package.json').version; const expected=`v${version}`; if(tag!==expected){console.error(`Refusing to publish: tag ${tag} does not match package.json version ${version} (expected ${expected}).`); process.exit(1)}"
+        run: |
+          node -e "const tag=process.env.GITHUB_REF_NAME||''; const version=require('./package.json').version; const expected=\`v\${version}\`; if(tag!==expected){console.error(\`Refusing to publish: tag \${tag} does not match package.json version \${version} (expected \${expected}).\`); process.exit(1)}"
 
       - name: Release gates (tests + audits + package checks)
         run: npm run ci:verify
@@ -68,4 +69,3 @@ jobs:
           name: openvsx-extension-${{ github.ref_name }}
           path: "*.vsix"
           retention-days: 30
-
