Fix headless integration runner on Windows

--- a/package.json
+++ b/package.json
@@ -701,7 +701,7 @@
     "check:size": "node scripts/check-vsix-size.js",
     "test:integration:stable": "node -e \"const {spawnSync}=require('child_process'); const env={...process.env, VSCODE_TEST_CHANNEL:'stable', VSCODE_TEST_INSTANCE_ID:process.env.VSCODE_TEST_INSTANCE_ID||require('crypto').randomUUID()}; const cmd=process.platform==='win32'?'npm.cmd':'npm'; const r=spawnSync(cmd,['run','test:integration'],{stdio:'inherit',env}); process.exit(r.status ?? 1);\"",
     "test:integration:insiders": "node -e \"const {spawnSync}=require('child_process'); const env={...process.env, VSCODE_TEST_CHANNEL:'insiders', VSCODE_TEST_INSTANCE_ID:process.env.VSCODE_TEST_INSTANCE_ID||require('crypto').randomUUID()}; const cmd=process.platform==='win32'?'npm.cmd':'npm'; const r=spawnSync(cmd,['run','test:integration'],{stdio:'inherit',env}); process.exit(r.status ?? 1);\"",
-    "test:integration:headless": "node -e \"const {spawnSync}=require('child_process'); const env={...process.env, VSCODE_TEST_CHANNEL:process.env.VSCODE_TEST_CHANNEL||'stable', VSCODE_TEST_INSTANCE_ID:process.env.VSCODE_TEST_INSTANCE_ID||require('crypto').randomUUID()}; const isLinux=process.platform==='linux'; const cmd=isLinux?'xvfb-run':(process.platform==='win32'?'npm.cmd':'npm'); const args=isLinux?['-a','npm','run','test:integration']:['run','test:integration']; const r=spawnSync(cmd,args,{stdio:'inherit',env}); process.exit(r.status ?? 1);\"",
+    "test:integration:headless": "node scripts/run-integration-headless.js",
     "test:clean-temp": "bash ./scripts/cleanup-temp-tests.sh",
     "ci:lint": "npm run lint && node scripts/l10n-check.js && npm run lint:webview && npm run lint:manifest",
     "ci:unit": "npm run test:unit && npm run test:core",
